# libfacedetection.train

./: README.md  pyproject.toml
doc/: multitask-refactor-plan.md  pose-adaptation-plan.md
tests/: test_data_transforms.py  test_eval_pose_cli.py  test_export_cli.py  test_export_pose_cli.py  test_labelv2_parser.py  test_legacy_checkpoint_load.py  test_legacy_widerface_eval.py  test_lr_scheduler.py  test_pose_coco_eval.py  test_pose_codec.py  test_pose_dataset.py  test_pose_losses.py  test_pose_model.py  test_pose_overfit_check.py  test_pose_postprocess.py  test_pose_transforms.py  test_pose_visualize.py  test_postprocess.py  test_train_cli.py  test_train_one_epoch.py  test_train_pose_cli.py  test_training_geometry.py  test_widerface_evaluation.py  test_yunet_criterion.py  test_yunet_forward_shapes.py
tools/: compare_inference.py
yunet_train/: __init__.py  config.py  paths.py
yunet_train/cli/: compare_inference.py  eval_pose.py  eval_pose_coco.py  eval_widerface.py  export_cpp.py  export_onnx.py  export_pose_onnx.py  train.py  train_pose.py
yunet_train/data/: __init__.py
yunet_train/engine/: __init__.py  checkpoint.py
yunet_train/evaluation/: __init__.py  widerface.py
yunet_train/inference/: __init__.py  postprocess.py
yunet_train/models/: __init__.py  head.py  yunet.py
yunet_train/pose/: __init__.py  config.py  criterion.py  dataset.py  model.py  postprocess.py  trainer.py
yunet_train/tasks/pose/: __init__.py  coco_eval.py  dataset.py  paths.py  transforms.py
yunet_train/tools/: check_pose_overfit.py  check_widerface.py  compare_forward.py  visualize_augmentations.py  visualize_pose_dataset.py
yunet_train/training/: __init__.py  criterion.py  trainer.py
